# full-stack-simple-template

./: .env  .pre-commit-config.yaml  LICENSE  compose.override.yml  compose.yml  pyproject.toml
.github/disabled_workflows/: pre-commit.yml  test-backend.yml  test-docker-compose.yml
backend/: .dockerignore  .test-env  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: backend_pre_start.py  initial_data.py  main.py  models.py  utils.py
backend/app/alembic/: env.py
backend/app/api/: deps.py
backend/app/api/routes/: items.py  login.py  private.py  users.py  utils.py
backend/app/core/: ai_providers.py  config.py  db.py  logging.py  security.py
backend/app/crud/: auth.py  items.py  users.py  utils.py
backend/app/models/: __init__.py  tables.py  user.py  utils.py
backend/scripts/: tests-start.sh
backend/tests/: conftest.py
backend/tests/api/routes/: test_items.py  test_login.py  test_private.py  test_users.py
backend/tests/crud/: test_user.py
backend/tests/scripts/: test_backend_pre_start.py
backend/tests/utils/: item.py  user.py
deployment/: .terraform.lock.hcl  main.tf  pyproject.toml  terraform.tf
frontend/: biome.json  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  utils.ts
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/Admin/: AddUser.tsx  DeleteUser.tsx  EditUser.tsx
frontend/src/components/Common/: ItemActionsMenu.tsx  NotFound.tsx  UserActionsMenu.tsx  UserMenu.tsx
frontend/src/components/Items/: AddItem.tsx  DeleteItem.tsx  EditItem.tsx
frontend/src/components/UserSettings/: Appearance.tsx  ChangePassword.tsx  DeleteConfirmation.tsx  UserInformation.tsx
frontend/src/components/ui/: pagination.tsx  password-input.tsx  provider.tsx  toaster.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: __root.tsx  _layout.tsx  login.tsx  recover-password.tsx  reset-password.tsx  signup.tsx
frontend/src/routes/_layout/: admin.tsx  index.tsx  items.tsx
frontend/tests/: login.spec.ts  sign-up.spec.ts
frontend/tests/utils/: user.ts
scripts/: generate-client.sh
