[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.14,<4.0"
dependencies = [
  "alembic<2.0.0,>=1.12.1",
  "asyncpg>=0.31.0",
  "chardet>=5.0.0,<6.0.0",
  "email-validator<3.0.0.0,>=2.3.0",
  "emails<1.0,>=0.6",
  "fastapi[standard]<1.0.0,>=0.114.2",
  "greenlet>=3.3.2",
  "httpx<1.0.0,>=0.25.1",
  "jinja2<4.0.0,>=3.1.4",
  "logfire[fastapi,sqlalchemy]>=4.29.0",
  "psycopg[binary]<4.0.0,>=3.1.13",
  "pwdlib[argon2,bcrypt]>=0.3.0",
  "pydantic>2.0",
  "pydantic-ai>=1.70.0",
  "pydantic-settings<3.0.0,>=2.2.1",
  "pyjwt<3.0.0,>=2.8.0",
  "python-multipart<1.0.0,>=0.0.7",
  "resend>=2.26.0",
  "sqlmodel<1.0.0,>=0.0.21",
  "tenacity<9.0.0,>=8.2.3",
]

[dependency-groups]
dev = [
  "coverage<8.0.0,>=7.4.3",
  "prek>=0.2.24,<1.0.0",
  "pytest<8.0.0,>=7.4.3",
  "pytest-asyncio>=0.23.8",
  "ruff<1.0.0,>=0.2.2",
  "ty>=0.0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.environment]
root = ["./app"]

[tool.ruff]
target-version = "py314"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG001",  # unused arguments in functions
  "T201",  # print statements are not allowed
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  # "W191",  # indentation contains tabs
  "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
filterwarnings = ["ignore"]
